修改测试逻辑

--- a/config
+++ b/config
@@ -8,7 +8,7 @@ master = "127.0.0.1:2013"
 start = "main"	-- main script
 bootstrap = "snlua bootstrap"	-- The service for bootstrap
 standalone = "0.0.0.0:2013"
-luaservice = "./service/?.lua;./skynet/service/?.lua"
+luaservice = "./service/?.lua;./skynet/service/?.lua./test/?.lua;"
 lualoader = "./skynet/lualib/loader.lua"
 lua_path = "./skynet/lualib/?.lua;./skynet/lualib/?/init.lua"
 lua_cpath = "./luaclib/?.so;./skynet/luaclib/?.so"
